# Sample

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  CMakeLists.txt  Gemfile  Hello.scala  LICENCE  LICENSE.txt  README.md  Ram.rb  Ram2.rb  Ram3.rb  Sample.java  Sample.py  SampleR.rb  Seijinshiki.rb  all.h  auto.rb  auto2.rb  bmi.rb  bookmarks.html  boost_vesion.cpp  convert.rb  downloads.rb  example.rb  hello.go  html2.txt  java.txt  java2.txt  jruby.rb  jruby_sample.rb  kuwagata.rb  kyuyo.rb  mail.txt  main.cpp  piza.rb  rain.rb  red_orden.rb  regex.rb  rmagick.rb  (+12 more)
wiki/: README.md
